--- a/.github/workflows/ci-cd.yaml
+++ b/.github/workflows/ci-cd.yaml
@@ -19,13 +19,13 @@ jobs:
       - name: Build
         working-directory: ./client
         run: npm run build
-      - name: Build
+      - name: Test
         working-directory: ./client
         run: npm test
       - name: Deploy
         uses: crazy-max/ghaction-github-pages@v1
         with:
           target_branch: gh_pages
-          build_dir: build
+          build_dir: ./client/build
         env:
           GITHUB_TOKEN: ${{secrets.GH_TOKEN}}
