--- a/api/package.json
+++ b/api/package.json
@@ -13,11 +13,15 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "express": "^4.17.1"
+    "cors": "^2.8.5",
+    "express": "^4.17.1",
+    "node-fetch": "^2.6.1"
   },
   "devDependencies": {
+    "@types/cors": "^2.8.10",
     "@types/express": "^4.17.11",
     "@types/node": "^14.14.31",
+    "@types/node-fetch": "^2.5.8",
     "env-cmd": "^10.1.0",
     "nodemon": "^2.0.7",
     "ts-node": "^9.1.1",
