--- a/client/package.json
+++ b/client/package.json
@@ -48,5 +48,11 @@
     "@types/react": "^17.0.2",
     "@types/react-dom": "^17.0.1",
     "prettier": "^2.2.1"
+  },
+  "jest": {
+    "collectCoverageFrom": [
+      "src/**/*.{js,jsx,ts,tsx}",
+      "!<rootDir>/node_modules/"
+    ]
   }
 }
