--- a/client/package.json
+++ b/client/package.json
@@ -47,6 +47,8 @@
     "@types/node": "^14.14.31",
     "@types/react": "^17.0.2",
     "@types/react-dom": "^17.0.1",
+    "fetch-mock": "^9.11.0",
+    "node-fetch": "^2.6.1",
     "prettier": "^2.2.1"
   },
   "jest": {
