--- a/client/package.json
+++ b/client/package.json
@@ -54,7 +54,10 @@
   "jest": {
     "collectCoverageFrom": [
       "src/**/*.{js,jsx,ts,tsx}",
-      "!<rootDir>/node_modules/"
+      "!<rootDir>/node_modules/",
+      "!**/*.d.ts",
+      "!**/*.types.ts",
+      "!**/reportWebVitals.js"
     ]
   }
 }
