deploy node server to heroku

--- a/.github/workflows/ci-cd.yaml
+++ b/.github/workflows/ci-cd.yaml
@@ -24,8 +24,11 @@ jobs:
         run: npm test
       - name: Deploy
         working-directory: ./api
-        run: |
-          echo "TODO: deploy to server :)"
+        uses: akhileshns/heroku-deploy@v3.12.12
+        with:
+          heroku_api_key: ${{secrets.HEROKU_API_KEY}}
+          heroku_app_name: "stock-ticker-server"
+          heroku_email: ${{secrets.HEROKU_EMAIL}}
   deploy-client:
     runs-on: ubuntu-latest
     steps:
