set api url in deployment

--- a/.github/workflows/ci-cd.yaml
+++ b/.github/workflows/ci-cd.yaml
@@ -54,3 +54,4 @@ jobs:
           build_dir: ./client/build
         env:
           GITHUB_TOKEN: ${{secrets.GH_TOKEN}}
+          REACT_APP_API_URI: https://stock-ticker-server.herokuapp.com/api
