--- a/.env.development.local.sample
+++ b/.env.development.local.sample
@@ -1,3 +1,4 @@
+API_PORT=4000
 ALPHAVANTAGE_API_KEY=apikey
 ALPHAVANTAGE_API_URI=https://www.alphavantage.co/query
 REACT_APP_API_URI=http://localhost:3001/api
